--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -1,13 +1,7 @@
 
       <div class="row">
         <div class="col">
-          <h1>Test page</h1>
-          <p>This page is meant to test stuff.</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col">
+          <h3>Test</h3>
           Currently <span id="currentClicks">{{clicks}}</span> clicks.<br/>
           <button onclick="decreaseClicks()">Decrease</button>
           <button onclick="increaseClicks()">Increase</button>
